Just updated picture for yoga

--- a/app/src/main/res/layout/activity_power_pose5.xml
+++ b/app/src/main/res/layout/activity_power_pose5.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#eca9b2"
+    android:background="#8BEA50"
     tools:context=".PowerPose">
 
     <TextView
@@ -21,7 +21,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/powerpose"
+        android:src="@drawable/yoga5"
         android:scaleType="center"
         android:layout_gravity="center"
         android:layout_marginBottom="36dp"/>
