--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -18,8 +18,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
         <!--<TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -35,14 +35,24 @@
             android:id="@+id/question"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Questionss?"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:padding="16dp"
-            android:textSize="20sp"
             android:fontFamily="@font/roboto_mono"
-            android:textColor="@color/blue">>
+            android:gravity="center"
+            android:padding="16dp"
+            android:text="Questionss?"
+            android:textAlignment="center"
+            android:textColor="@color/blue"
+            android:textSize="20sp">>
 
         </TextView>
+
+        <Button
+            android:id="@+id/skip"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="145dp"
+            android:layout_marginVertical="32dp"
+            android:layout_gravity="bottom"
+            android:text="Skip" />
+
     </LinearLayout>
 </androidx.cardview.widget.CardView>
