Instructions added, but was not able to test

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,6 +26,11 @@
             android:icon="@drawable/ic_menu_share"
             android:title="@string/Mindfulness" />
 
+        <item
+            android:id="@+id/Gameinstructions"
+            android:icon="@drawable/sqaure"
+            android:title="@string/game_instructions_button" />
+
 
     </group>
 
