--- a/app/src/main/res/layout/activity_power_pose.xml
+++ b/app/src/main/res/layout/activity_power_pose.xml
@@ -21,7 +21,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/powerpose"
+        android:id ="@+id/rView"
         android:scaleType="center"
         android:layout_gravity="center"
         android:layout_marginBottom="36dp"/>
