Yoga pose image temp fix

--- a/app/src/main/res/layout/activity_power_pose.xml
+++ b/app/src/main/res/layout/activity_power_pose.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#eca9b2"
+    android:background="#C51162"
+    android:id="@+id/powerlay"
     tools:context=".PowerPose">
 
     <TextView
