--- a/app/src/main/res/layout/fragment_add_patient.xml
+++ b/app/src/main/res/layout/fragment_add_patient.xml
@@ -43,7 +43,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginTop="8dp"
             android:fontFamily="@font/roboto"
-            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ "
+            android:digits="0123456789-"
             android:hint="Patient Id"
             android:selectAllOnFocus="true" />
 
