new all questions ection

--- a/app/src/main/res/layout/fragment_play.xml
+++ b/app/src/main/res/layout/fragment_play.xml
@@ -73,61 +73,84 @@
                 android:fontFamily="@font/roboto_mono"
                 android:text="Anger"
                 android:theme="@style/PrimaryFlatButton" />
-            <Button
-                android:id="@+id/post_traumatic_stress"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="match_parent"
-                android:text="Post Traumatic Stress"
-                android:theme="@style/PrimaryFlatButton"
-                android:fontFamily="@font/roboto_mono"
-                android:enabled="true"
-                />
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:orientation="horizontal">
+
             <Button
                 android:id="@+id/dissociation"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:text="Dissociation"
-                android:theme="@style/PrimaryFlatButton"
+                android:enabled="true"
                 android:fontFamily="@font/roboto_mono"
-                android:enabled="true" />
+                android:text="Dissociation"
+                android:theme="@style/PrimaryFlatButton" />
+
+            <Button
+                android:id="@+id/post_traumatic_stress"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:enabled="true"
+                android:fontFamily="@font/roboto_mono"
+                android:text="Post Traumatic Stress"
+                android:theme="@style/PrimaryFlatButton" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="58dp">
+
             <Button
                 android:id="@+id/sexual_concerns"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:text="Sexual Concerns"
-                android:theme="@style/PrimaryFlatButton"
+                android:layout_weight="1"
+                android:enabled="true"
                 android:fontFamily="@font/roboto_mono"
-                android:enabled="true" />
+                android:text="Sexual Concerns"
+                android:theme="@style/PrimaryFlatButton" />
 
             <Button
                 android:id="@+id/depres"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:text="Depression"
-                android:theme="@style/PrimaryFlatButton"
+                android:layout_weight="1"
+                android:enabled="true"
                 android:fontFamily="@font/roboto_mono"
-                android:enabled="true"/>
+                android:text="Depression"
+                android:theme="@style/PrimaryFlatButton" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
             <Button
                 android:id="@+id/wild_card"
                 android:layout_width="2dp"
-                android:layout_weight="1"
                 android:layout_height="match_parent"
-                android:text="Wild Card"
-                android:theme="@style/PrimaryFlatButton"
-                android:fontFamily="@font/roboto_mono"
+                android:layout_weight="1"
                 android:enabled="true"
-                />
-        </LinearLayout>
+                android:fontFamily="@font/roboto_mono"
+                android:text="Wild Card"
+                android:theme="@style/PrimaryFlatButton" />
 
+            <Button
+                android:id="@+id/ALL"
+                android:layout_width="2dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:enabled="true"
+                android:fontFamily="@font/roboto_mono"
+                android:text="General"
+                android:theme="@style/PrimaryFlatButton" />
+        </LinearLayout>
 
         <EditText
             android:id="@+id/catSelected"
