--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -27,7 +27,7 @@
             android:title="@string/Mindfulness" />
 
         <item
-            android:id="@+id/Gameinstructions"
+            android:id="@+id/GameInstructions"
             android:icon="@drawable/sqaure"
             android:title="@string/game_instructions_button" />
 
