--- a/app/src/main/res/layout/activity_safetyconcerns.xml
+++ b/app/src/main/res/layout/activity_safetyconcerns.xml
@@ -50,7 +50,7 @@
 
         <Button
             android:id="@+id/game_instructions"
-            android:onClick="GameinstructionsPage"
+            android:onClick="GameInstructionsPage"
             android:layout_width="220dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
